--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-    "name": "Gabriella",
-    "description": "Gabriella",
+    "name": "Laurence",
+    "description": "Laurence",
     "keywords": ["vmess vless trojan shadowsocks socks"],
     "env": {
         "AA": {
